# py-cat2cat

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  program.prof  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml  ci.yml
docs/: Makefile  advanced-workflows.md  benchmarks.txt  choosing-weights-and-validating-ml.md  conf.py  example.ipynb  example.md  get-started.md  index.md  make.bat  requirements.txt
src/cat2cat/: __init__.py  cat2cat.py  cat2cat_ml.py  cat2cat_ml_utils.py  cat2cat_utils.py  dataclass.py  datasets.py  mappings.py  summary.py
src/cat2cat/data/: occup_panel.pkl  occup_small.pkl  trans.csv  trans.pkl  verticals.pkl
tests/: test_cat2cat.py  test_cat2cat_dataclass.py  test_cat2cat_ml.py  test_cat2cat_ml_utils.py  test_cat2cat_utils.py  test_datasets.py  test_mappings.py  test_panel_idvar.py  test_summary.py
