[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cat2cat"
authors = [
  {name = "Maciej Nasinski", email = "nasinski.maciej@gmail.com"},
]
description = "Unifying an inconsistently coded categorical variable in a panel/longtitudal dataset."
readme = "README.md"
version = "0.1.5"
requires-python = ">=3.8"
keywords = ["panel", "categorical", "longtitudal", "inconsistent", "cat2cat"]
license = {text = "Apache License 2.0 | file LICENSE"}
classifiers = [
"Development Status :: 3 - Alpha",
"Programming Language :: Python",
"Programming Language :: Python :: 3",
"Programming Language :: Python :: 3.8",
"Programming Language :: Python :: 3.9",
"Programming Language :: Python :: 3.10",
"Programming Language :: Python :: 3.11",
"Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "importlib-resources"
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "mypy"]
docs = [
  "Sphinx", 
  "myst-parser",
  "sphinx-autoapi", 
  "sphinx-rtd-theme"
]
build = ["build"]
benchmark = ["snakeviz"]
styler = ["flake8", "black"]
all = ["cat2cat[test,docs,build,benchmark,styler]"]

[project.urls]
homepage = "https://github.com/Polkas/multidim"
documentation = "https://multidim.readthedocs.io/en/latest/"
repository = "https://github.com/Polkas/multidim"
changelog = "https://raw.githubusercontent.com/Polkas/multidim/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"cat2cat.data" = ["*"]

[tool.mypy]
python_version = "3.8"
disallow_untyped_defs = true
ignore_missing_imports = true
